# bevy-kafka-3d

./: .gitignore  Cargo.toml
..bfg-report/2023-10-19/13-30-17/: cache-stats.txt  object-id-map.old-new.txt
..bfg-report/2023-10-19/13-30-17/protected-dirt/: 5719e188-HEAD.csv
..bfg-report/2023-10-19/13-30-57/: cache-stats.txt  object-id-map.old-new.txt
.cargo/: config.toml
assets/shaders/: line_material.wgsl
resources/: another.txt  config.toml  docker.sh  kafka.sh  kube_helm.sh  log.txt  observe.sh
src/: main.rs
src/camera/: lerping_camera.rs  mod.rs  raycase_select.rs  raycast_select.rs
src/component_interaction/: mod.rs
src/config/: kafka.rs  layer.rs  metrics.rs  mod.rs
src/cursor_adapter/: mod.rs
src/data_subscriber/: data_event_reader.rs  data_subscriber.rs  data_subscriber_plugin.rs  kafka_data_subscriber.rs  metric_event.rs  mod.rs  network_metadata_event.rs
src/draw_network/: mod.rs
src/event/: downstream_events.rs  event_actions.rs  event_descriptor.rs  event_propagation.rs  event_provider.rs  event_state.rs  mod.rs
src/event/state_transition/: get_state_transitions.rs  mod.rs  parent_child_queries.rs  state_transition_types.rs  state_transitions_plugin.rs  state_transitions_system.rs
src/graph/: draw_graph_points.rs  graph_data_event_reader.rs  graph_menu.rs  graph_plugin.rs  mod.rs  radial.rs  setup_graph.rs
src/initialize_test_plugin/: mod.rs
src/interactions/: mod.rs
src/lines/: line_list.rs  mod.rs
src/menu/: interaction_ui_event_writer_system.rs  menu_event.rs  menu_resource.rs  mod.rs
src/menu/config_menu_event/: config_event.rs  config_event_reader.rs  config_event_state_change.rs  config_menu_event_plugin.rs  interaction_config_event_reader.rs  interaction_config_event_writer.rs  mod.rs  network_component_interaction_system.rs
src/menu/graphing_menu/: graph_menu.rs  mod.rs
src/menu/menu_event/: change_style.rs  interaction_config_event_reader.rs  interaction_config_event_writer.rs  interaction_ui_event_reader.rs  interaction_ui_event_writer.rs  mod.rs  network_component_event_reader.rs
src/menu/ui_menu_event/: change_style.rs  entity_component_state_transition.rs  interaction_ui_event_reader.rs  interaction_ui_event_writer.rs  mod.rs  next_action.rs  state_change_factory.rs  style_context.rs  transition_groups.rs  types.rs  ui_context.rs  ui_menu_event_plugin.rs  ui_state_change.rs
src/menu/ui_menu_event/type_alias/: mod.rs  (+5 more)
src/metrics/: mod.rs  network_metrics.rs
src/ndarray/: mod.rs
src/network/: draw_network.rs  mod.rs
src/network_state/: mod.rs
src/pickable_events/: mod.rs
src/render_html/: mod.rs
src/test/: config_test.rs  mod.rs  test_arr.rs  test_convergence.rs  test_data_subscriber.rs  test_interpolate.rs  test_plugin.rs  test_util.rs
src/test/bevy_tests/: default_plugins.rs  graph_tests.rs  kafka_metric_data_test_system.rs  mock_metric_data_test_system.rs  mod.rs
src/ui_components/: mod.rs  state_transitions.rs  ui_menu_component.rs
src/ui_components/menu_components/: base_menu.rs  collapsable_menu.rs  dropdown_menu.rs  mod.rs  root_collapsable.rs  submenu_builder.rs
src/ui_components/ui_components/: base_menu.rs  collapsable_menu.rs  dropdown_menu.rs  mod.rs  root_collapsable.rs  submenu_builder.rs
src/util/: mod.rs
src/visualization/: mod.rs
(+26 files in other folders)
