[package]
name = "nn-fe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking"]  }
bevy_prototype_lyon = "0.8.0"
bevy_transform = "0.10.1"
bevy_mod_picking = {path = "../../../bevy_mod_picking"}
ndarray = "0.15.6"
serde_json = "1.0.96"
serde = "1.0.160"
bevy-inspector-egui = "0.18.3"
tokio = {version = "1.28.0", features = ["full"] }
kafka = "0.9.0"
toml = "0.7.3"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
