[package]
name = "nn-fe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.3" }
#bevy_prototype_lyon = "0.9.0"
bevy_transform = "0.11.3"

bevy_mod_picking = "0.15.0"
bevy_picking_core = "0.15.0"
bevy_picking_ui = "0.15.0"
bevy_picking_input = "0.15.0"
bevy_picking_raycast = "0.15.0"
bevy_picking_sprite = "0.15.0"
bevy_picking_highlight = "0.15.0"
bevy_picking_selection = "0.15.0"


bevy_ui = "0.11.3"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
approx = "0.5.1"
serde_json = "1.0.96"
serde = "1.0.160"
#bevy-inspector-egui = "0.20.0"
tokio = {version = "1.28.0", features = ["full"] }
num-traits = "0.2.15"
toml = "0.8.4"
statrs = "0.16.0"
rdkafka = "0.34.0"
lazy_static = "1.4.0"
wait_for = {path = "../../../rust-spring-knockoff/wait_for"}
pulldown-cmark = "0.9.2"
#argmin = { version = "0.8.1", default-features = false }
#argmin-math = { version = "0.3.0", features = ["ndarray_v0_15-nolinalg"] }
#rand = "0.8.5"
#linfa-preprocessing = "0.6.1"
#linfa = "0.6.1"

[dev-dependencies]
testcontainers = "0.15.0"

# Enable a small amount of optimization in debug mode
#[profile.dev]
#opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
#[profile.dev.package."*"]
#opt-level = 3
